# taya-snoop

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
docker/graphql/: Dockerfile
docker/snoop/: Dockerfile
migrations/2025-01-27-034240_create_logs_table/: down.sql  up.sql
migrations/2025-01-28-030221_create_pairs_table/: down.sql  up.sql
migrations/2025-01-28-030232_create_sync_state_table/: up.sql
migrations/2025-01-28-033256_create_tokens_table/: up.sql
migrations/2025-03-28-200151_create_tables/: down.sql  up.sql
src/: lib.rs
src/abi/: erc20.rs  factory.rs  mod.rs
src/chains/: mod.rs
src/configs/: mod.rs
src/db/: mod.rs  schema.rs
src/db/models/: bundle.rs  burn.rs  data.rs  events.rs  factory.rs  log.rs  mint.rs  mod.rs  pair.rs  swap.rs  sync_state.rs  token.rs  tokens.rs  transaction.rs  user.rs
src/handlers/: burn.rs  mint.rs  mod.rs  pairs.rs  swap.rs  sync.rs  transfer.rs  utils.rs
src/rpc/: mod.rs
src/utils/: format.rs
