[package]
name = "taya-snoop"
version = "1.0.0"
license = "MIT"
edition = "2021"
repository = "https://github.com/sub-labs/taya-snoop"
description = "Taya logs and event indexer"

[dependencies]
alloy = { version = "0.9", features = ["full"] }
clap = { version = "4", features = ["derive"] }
fastnum = { version = "0.1", features = ["serde"] }
futures = "0.3"
log = "0.4"
mongodb = "3"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3"
tokio = { version = "1", features = ["full"] }

[dependencies.simple_logger]
version = "5"
default-features = false
features = ["colors"]

[[bin]]
path = "bin/snoop.rs"
name = "snoop"
