[package]
name = "taya-snoop"
version = "1.0.0"
license = "MIT"
edition = "2021"
repository = "https://github.com/sub-labs/taya-snoop"
description = "Taya logs and event indexer"

[dependencies]
alloy = { version = "0.13", features = ["full"] }
bigdecimal = "0.4"
clap = { version = "4", features = ["derive"] }
diesel = { version = "2", features = ["postgres", "numeric"] }
diesel_migrations = { version = "2", features = ["postgres"] }
futures = "0.3"
log = "0.4"
tokio = { version = "1", features = ["full"] }

[dependencies.simple_logger]
version = "5"
default-features = false
features = ["colors"]

[[bin]]
path = "bin/snoop.rs"
name = "snoop"
